# data-migration-engine

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py
docs/: learning-guide.html
scripts/: run_migration.py  seed_mappings.py
src/: __init__.py
src/api/: __init__.py  app.py
src/chatbot/: __init__.py  lineage_chatbot.py
src/config/: settings.py
src/extractors/: __init__.py  db2_extractor.py  parallel_extractor.py
src/lineage/: __init__.py  lineage_engine.py
src/loaders/: __init__.py  fast_loader.py  s3_stager.py
src/models/: __init__.py  database.py  schemas.py
src/pipeline/: __init__.py  orchestrator.py
src/reconciliation/: __init__.py  reconciler.py  rollback_manager.py
src/transformers/: __init__.py  business_rules.py  field_transformer.py  glue_transformer.py
src/utils/: __init__.py  database.py  logging.py
tests/: conftest.py  test_business_rules.py  test_chatbot.py  test_db2_extractor.py  test_field_transformer.py  test_lineage.py  test_reconciler.py
